frontend/test/should_pass/exectype_AssignVarToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia && y:AA=vario && x=y || u:int=boo && v:int=hoo && u=v);
	}
}