frontend/test/should_fail/exectype_AssignVarToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(u:int=::boo && v:string=::hoo && u=v);
	}
}